arm/.metadata/.plugins/org.eclipse.cdt.ui/03_UART_RX_INT_rev2.build.log
11:28:10 **** Incremental Build of configuration Debug for project 03_UART_RX_INT_rev2 ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'HAL_UART_RxCpltCallback':
../Core/Src/main.c:59:19: warning: comparison between pointer and integer
   59 |         if(rxData == 'a')
      |                   ^~
../Core/Src/main.c:61:42: error: 'GPIO_PIN5' undeclared (first use in this function); did you mean 'GPIO_PIN_5'?
   61 |                 HAL_GPIO_WritePin(GPIOA, GPIO_PIN5, 1)
      |                                          ^~~~~~~~~
      |                                          GPIO_PIN_5
../Core/Src/main.c:61:42: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c:61:55: error: expected ';' before '}' token
   61 |                 HAL_GPIO_WritePin(GPIOA, GPIO_PIN5, 1)
      |                                                       ^
      |                                                       ;
   62 |         }
      |         ~                                              
../Core/Src/main.c:64:19: warning: comparison between pointer and integer
   64 |         if(rxData == 'b')
      |                   ^~
../Core/Src/main.c:66:55: error: expected ';' before '}' token
   66 |                 HAL_GPIO_WritePin(GPIOA, GPIO_PIN5, 1)
      |                                                       ^
      |                                                       ;
   67 |         }
      |         ~                                              
make: *** [Core/Src/subdir.mk:43: Core/Src/main.o] Error 1
"make -j16 all" terminated with exit code 2. Build might be incomplete.

11:28:10 Build Failed. 4 errors, 2 warnings. (took 133ms)

